Fix illegal reflective access in exec provider (fixes #862) (#868)